[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/zdave-parity/polkadot-bulletin-chain.git"

[workspace]
resolver = "2"
members = [
    "bridges/bin/runtime-common",
    "bridges/modules/grandpa",
    "bridges/modules/messages",
    "bridges/modules/parachains",
    "bridges/modules/xcm-bridge-hub-router",
    "node",
    "pallets/transaction-storage",
    "pallets/validator-set",
    "runtime",
]
[profile.release]
panic = "unwind"
