[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/zdave-parity/polkadot-bulletin-chain.git"

[workspace]
resolver = "2"
members = [
    "bridges/bin/runtime-common",
    "bridges/modules/grandpa",
    "bridges/modules/messages",
    "bridges/modules/parachains",
    "bridges/modules/xcm-bridge-hub-router",
    "node",
    "pallets/relayer-set",
    "pallets/transaction-storage",
    "pallets/validator-set",
    "runtime",
]
[profile.release]
panic = "unwind"

[patch."https://github.com/paritytech/substrate.git"]
node-template = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-benchmarking = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-support = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-support-procedural = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-support-procedural-tools = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-support-procedural-tools-derive = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-api = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-api-proc-macro = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-core = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-core-hashing = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-debug-derive = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-externalities = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-std = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-storage = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-runtime-interface = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-runtime-interface-proc-macro = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-tracing = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-wasm-interface = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-io = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-keystore = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-state-machine = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-panic-handler = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-trie = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-runtime = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-application-crypto = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-arithmetic = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-weights = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-test-runtime-client = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-block-builder = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-client-api = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-prometheus-endpoint = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-executor = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-executor-common = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-allocator = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-maybe-compressed-blob = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-executor-wasmtime = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-runtime-test = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-wasm-builder = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-version = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-core-hashing-proc-macro = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-version-proc-macro = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-tracing = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-tracing-proc-macro = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-blockchain = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-consensus = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-inherents = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-test-primitives = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-database = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-test-runtime = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-executive = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-system = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-try-runtime = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-balances = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-transaction-payment = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-system-rpc-runtime-api = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-babe = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-authorship = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-session = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-timestamp = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-timestamp = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-session = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-staking = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-consensus-babe = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-consensus-slots = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-election-provider-support = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-election-provider-solution-type = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-npos-elections = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-test-utils = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-test-utils-derive = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-service = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-chain-spec = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-chain-spec-derive = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-network = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-network-common = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-utils = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-consensus-grandpa = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-network-light = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-network-sync = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
fork-tree = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-telemetry = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-client-db = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-state-db = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
kitchensink-runtime = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-benchmarking-pallet-pov = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-system-benchmarking = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-primitives = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-alliance = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-collective = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-identity = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-asset-conversion = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-assets = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-asset-conversion-tx-payment = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-asset-rate = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-asset-tx-payment = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-authority-discovery = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-authority-discovery = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-bags-list = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-bounties = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-treasury = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-utility = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-root-testing = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-child-bounties = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-contracts = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-contracts-primitives = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-contracts-proc-macro = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-proxy = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-conviction-voting = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-scheduler = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-preimage = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-core-fellowship = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-democracy = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-election-provider-multi-phase = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-elections-phragmen = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-fast-unstake = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-staking = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-staking-reward-curve = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-glutton = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-grandpa = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-offences = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-keyring = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-im-online = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-indices = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-lottery = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-support-test = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-support-test-pallet = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-membership = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-message-queue = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-mmr = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-mmr-primitives = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-multisig = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nft-fractionalization = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nfts = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nfts-runtime-api = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nis = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nomination-pools = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nomination-pools-benchmarking = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nomination-pools-runtime-api = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-offences-benchmarking = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-ranked-collective = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-recovery = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-referenda = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-remark = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-salary = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-session-benchmarking = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-society = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-staking-runtime-api = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-state-trie-migration = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-remote-externalities = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-rpc-client = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-rpc-api = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-transaction-pool-api = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-state-trie-migration-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-statement = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-statement-store = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-sudo = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-tips = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-transaction-storage = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-transaction-storage-proof = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-uniques = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-vesting = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-whitelist = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-block-builder = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-offchain = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-transaction-pool = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-informant = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-keystore = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-network-transactions = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-transaction-pool = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-test-runtime-transaction-pool = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-rpc-server = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-rpc-spec-v2 = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-sysinfo = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-consensus-aura = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-test-client = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-offchain = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-runtime-interface-test-wasm = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-metadata-ir = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-benchmarking-cli = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-cli = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-template-runtime = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-aura = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-template = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-transaction-payment-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-basic-authorship = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-proposer-metrics = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-aura = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-slots = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-network-test = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-grandpa = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-network-gossip = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-statement-store = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-frame-rpc-system = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
try-runtime-cli = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-cli-test-utils = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-build-script-utils = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-bench = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-testing = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-executor = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-cli = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-inspect = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
mmr-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-babe = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-epochs = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-babe-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-grandpa-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-sync-state-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-authority-discovery = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-network-statement = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-storage-monitor = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-service-test = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-frame-cli = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
chain-spec-builder = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
subkey = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-beefy = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-consensus-beefy = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-beefy-rpc = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-manual-seal = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sc-consensus-pow = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-consensus-pow = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
mmr-gadget = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-atomic-swap = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-bags-list-fuzzer = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-bags-list-remote-tests = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-beefy = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-beefy-mmr = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
binary-merkle-tree = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-election-provider-e2e-test = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-election-solution-type-fuzzer = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-examples = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-default-config-example = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-dev-mode = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-example-basic = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-example-kitchensink = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-example-offchain-worker = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-example-split = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nicks = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-node-authorization = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nomination-pools-fuzzer = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-nomination-pools-test-staking = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-scored-pool = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-staking-reward-fn = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
pallet-root-offences = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
frame-support-test-compile-pass = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-api-test = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-application-crypto-test = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-arithmetic-fuzzer = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-crypto-ec-utils = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-genesis-builder = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-npos-elections-fuzzer = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-runtime-interface-test = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
sp-runtime-interface-test-wasm-deprecated = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-template-release = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-test-utils-test-crate = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
substrate-frame-rpc-support = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
generate-bags = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
node-runtime-generate-bags = { git = "https://github.com/zdave-parity/substrate.git" , branch = "polkadot-bulletin-chain" }
