[package]
name = "polkadot-bulletin-chain-runtime"
version = "0.1.0-dev"
description = "Runtime for the Polkadot Bulletin Chain"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/paritytech/polkadot-bulletin-chain/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
log = { version = "0.4", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }

frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v1.0.0" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-babe = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-offences = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-babe = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-consensus-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-transaction-storage-proof = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-version = { version = "22.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

# Used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v1.0.0" }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v1.0.0" }

# Local dependencies
pallet-transaction-storage = { version = "4.0.0-dev", default-features = false, path = "../pallets/transaction-storage" }
pallet-validator-set = { version = "1.0.0", default-features = false, path = "../pallets/validator-set" }

# Bridge dependencies
bp-bridge-hub-polkadot = { version = "0.1.0", default-features = false, path = "../bridges/primitives/chain-bridge-hub-polkadot" }
bp-header-chain = { version = "0.1.0", default-features = false, path = "../bridges/primitives/header-chain" }
bp-messages = { version = "0.1.0", default-features = false, path = "../bridges/primitives/messages" }
bp-parachains = { version = "0.1.0", default-features = false, path = "../bridges/primitives/parachains" }
bp-polkadot = { version = "0.1.0", default-features = false, path = "../bridges/primitives/chain-polkadot" }
bp-polkadot-bulletin = { version = "0.1.0", default-features = false, path = "../bridges/primitives/chain-polkadot-bulletin" }
bp-polkadot-core = { version = "0.1.0", default-features = false, path = "../bridges/primitives/polkadot-core" }
bp-runtime = { version = "0.1.0", default-features = false, path = "../bridges/primitives/runtime" }
bridge-runtime-common = { version = "0.1.0", default-features = false, path = "../bridges/bin/runtime-common" }
pallet-bridge-grandpa = { version = "0.1.0", default-features = false, path = "../bridges/modules/grandpa" }
pallet-bridge-parachains = { version = "0.1.0", default-features = false, path = "../bridges/modules/parachains" }
pallet-bridge-messages = { version = "0.1.0", default-features = false, path = "../bridges/modules/messages" }

# XCM dependencies
xcm = { version = "1.0.0", default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
xcm-builder = { version = "1.0.0", default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }
xcm-executor = { version = "1.0.0", default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v1.0.0" }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v1.0.0" }

[dev-dependencies]
bp-test-utils = { version = "0.1.0", path = "../bridges/primitives/test-utils" }
bridge-runtime-common = { version = "0.1.0", features = ["integrity-test"], path = "../bridges/bin/runtime-common" }
sp-io = { version = "23.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-keyring = { version = "24.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-trie = { version = "22.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
static_assertions = "1.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",

	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-authorship/std",
	"pallet-babe/std",
	"pallet-grandpa/std",
	"pallet-im-online/std",
	"pallet-offences/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-consensus-grandpa/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-transaction-storage-proof/std",
	"sp-version/std",

	"frame-system-rpc-runtime-api/std",

	"frame-benchmarking?/std",
	"frame-system-benchmarking?/std",

	"pallet-transaction-storage/std",
	"pallet-validator-set/std",

	"bp-bridge-hub-polkadot/std",
	"bp-header-chain/std",
	"bp-messages/std",
	"bp-parachains/std",
	"bp-polkadot/std",
	"bp-polkadot-bulletin/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	"bridge-runtime-common/std",
	"pallet-bridge-grandpa/std",
	"pallet-bridge-parachains/std",
	"pallet-bridge-messages/std",

	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",

	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-babe/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-offences/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",

	"frame-benchmarking/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",

	"bridge-runtime-common/runtime-benchmarks",
	"pallet-bridge-grandpa/runtime-benchmarks",
	"pallet-bridge-messages/runtime-benchmarks",
	"pallet-bridge-parachains/runtime-benchmarks",

	"pallet-transaction-storage/runtime-benchmarks",
	"pallet-validator-set/runtime-benchmarks",

	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-babe/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",

	"pallet-transaction-storage/try-runtime",
	"pallet-validator-set/try-runtime",
]
